[package]
name = "ps-hash-neon"
version = "0.1.0-9"
description = "Node.js bindings for ps-hash"
authors = ["Prokop Schield"]
license = "GPL-3.0-or-later"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
ps-hash = "0.1.0-10"
